k8s/main-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-app-db
spec:
  selector:
    matchLabels:
      app: main-app-db
  template:
    metadata:
      labels:
        app: main-app-db
    spec:
      containers:
      - name: main-app-db
        image: pyms_main_mysql:0.1    
              
        resources:
        ports:
          - containerPort: 3306            
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-app
spec:
  selector:
    matchLabels:
      app: main-app
  template:
    metadata:
      labels:
        app: main-app
    spec:
      restartPolicy: Always
      containers:
      - name: main-app-backend
        image: pyms_main_backend:0.1
          
        command: ["python", "main.py"]
        resources:
        
        ports:
        - containerPort: 8000

---

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-app-queue
spec:
  selector:
    matchLabels:
      app: main-app
  template:
    metadata:
      labels:
        app: main-app
    spec:
      containers:
      - name: main-app-queue
        image: pyms_main_queue:0.1      
        command: ["python", "consumer.py"]
        resources:
