k8s/admin-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-app
spec:
  selector:
    app: admin-app
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30000
  type: NodePort
---

apiVersion: v1
kind: Service
metadata:
  name: admin-app-db
spec:  
  selector:
    app: admin-app-db
  ports:
  - port: 3306
    targetPort: 3306
  #   nodePort: 30010
  #   protocol: TCP
  # type: NodePort
  type: ClusterIP
  
  

# ---

# apiVersion: v1
# kind: Service
# metadata:
#   name: main-app
# spec:
#   selector:
#     app: main-app
#   ports:
#   - port: 5000
#     targetPort: 5000
#     nodePort: 30001
#   type: NodePort

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: react-app
# spec:
#   selector:
#     app: react-app
#   ports:
#   - port: 3000
#     targetPort: 3000
#     nodePort: 30000
#   type: NodePort
