k8s/admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-app
spec:
  selector:
    app: admin-app
  ports:
  - port: 3000
    targetPort: 8000    
  type: ClusterIP
---

apiVersion: v1
kind: Service
metadata:
  name: admin-app-db
spec:  
  selector:
    app: admin-app-db
  ports:
  - port: 3306
    targetPort: 3306    
    protocol: TCP  
  type: ClusterIP
  


# ###############################################################################
---
### Deployments

apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-app
  template:
    metadata:
      labels:
        app: admin-app
    spec:
      restartPolicy: Always
      containers:
      - name: admin-app-backend
        image: pyms_admin_backend:0.2
          
        command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
        resources:
        
        ports:
        - containerPort: 8000

          
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-app-db
spec:
  selector:
    matchLabels:
      app: admin-app-db
  template:
    metadata:
      labels:
        app: admin-app-db
    spec:
      containers:
      - name: admin-app-db
        image: pyms_admin_mysql:0.1
        resources:

        ports:
          - containerPort: 3306
            protocol: TCP    

        volumeMounts:
        - mountPath: /var/lib/mysql
          name: dbdata-volume
      
      volumes:
      - name: dbdata-volume
        hostPath:          
          path: /run/desktop/mnt/host/c/data/admin/db/.dbdata      
          type: Directory
                
---

##### Not needed if working with existing DB files. Needed for setting up new DB #####
# apiVersion: batch/v1
# kind: Job
# metadata:
#   name: admin-sql-job
# spec:
#   template:
#     spec:
#       containers:
#       - name: myjob
#         image: pyms_admin_backend:0.2
#         command: ["sh","-c"]        
#         args: ["python manage.py migrate; python manage.py migrate"]
#         env:
#           - name: QUEUE_URL
#             value: amqps://snwftsci:eiBfAIXrTH3uyenftpshNJwhGBFIfDya@rattlesnake.rmq.cloudamqp.com/snwftsci
#       restartPolicy: OnFailure
#   backoffLimit: 5
      

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-app-queue
spec:
  selector:
    matchLabels:
      app: admin-app-queue
  template:
    metadata:
      labels:
        app: admin-app-queue
    spec:
      containers:
      - name: admin-app-queue
        image: pyms_admin_queue:0.1
        command: ["python", "consumer.py"]
        resources:
