k8s/main-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-app
spec:
  selector:
    app: main-app
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30001
  type: NodePort
---

apiVersion: v1
kind: Service
metadata:
  name: main-app-db
spec:  
  selector:
    app: main-app-db
  ports:
  - port: 3306
    targetPort: 3306
    nodePort: 30020
    protocol: TCP
  type: NodePort
  # type: ClusterIP
