k8s/react.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app
spec:
  selector:
    app: react-app
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30002
  type: NodePort

---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
spec:
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      restartPolicy: Always
      containers:
      - name: react-app-backend
        image: pyms_reactapp:0.1
          
        command: ["npm", "start"]
        resources:
        
        ports:
        - containerPort: 3000
